# outmark

./: CMakeLists.txt  LICENSE  README.md  TODO  bake_dataset.py  datasets.py  debug_server.py  extract_dataset.py  image_server.py  metrics.py  model.py  preprocess.py  requirements.txt  run.sh  segmenter.py  slice_net.py  train.py  transfer.ipynb  util.py  vnet.py  volunet.py
EDA/: CompareTwoScans.ipynb
MRF/src/: CMakeLists.txt
NN/: build_training_set.py  datasets.py  model.py  model2.py  preprocess.py  train.py
data/: model_experiment_1.txt
models/: mrf.model
mrf/src/: build_training_set.cc
nn/: crfcnn.py  datasets.py  dense_unet.py  model.py  model3.py  model5.py  preprocess.py  train.py  unet.py  util.py  volunet.py  znet.py
scripts/: run_stress_test.sh
src/: CMakeLists.txt  ball_in_cube.cc  data_experiment_1.cc  main.cc  model_experiment_1.cc  segment.cc
